@@ -24,7 +24,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Web Site Command to handle Fligt Report submissions.
  * @author Luke
- * @version 4.1
+ * @version 4.2
  * @since 1.0
  */
 
@@ -179,18 +179,18 @@ public class PIREPSubmitCommand extends AbstractCommand {
 
 			// Check the schedule database and check the route pair
 			boolean isAssignment = (pirep.getDatabaseID(DatabaseID.ASSIGN) != 0);
-			int avgHours = sdao.getFlightTime(pirep);
-			if ((avgHours == 0) && (!isAcademy) && (!isAssignment)) {
+			FlightTime avgHours = sdao.getFlightTime(pirep);
+			if ((avgHours.getFlightTime() == 0) && (!isAcademy) && (!isAssignment)) {
 				pirep.setAttribute(FlightReport.ATTR_ROUTEWARN, true);
 				ctx.setAttribute("unknownRoute", Boolean.TRUE, REQUEST);
 			} else {
-				int minHours = (int) ((avgHours * 0.75) - (SystemData.getDouble("users.pirep.pad_hours", 0) * 10));
-				int maxHours = (int) ((avgHours * 1.15) + (SystemData.getDouble("users.pirep.pad_hours", 0) * 10));
+				int minHours = (int) ((avgHours.getFlightTime() * 0.75) - (SystemData.getDouble("users.pirep.pad_hours", 0) * 10));
+				int maxHours = (int) ((avgHours.getFlightTime() * 1.15) + (SystemData.getDouble("users.pirep.pad_hours", 0) * 10));
 
 				if ((pirep.getLength() < minHours) || (pirep.getLength() > maxHours)) {
 					pirep.setAttribute(FlightReport.ATTR_TIMEWARN, true);
 					ctx.setAttribute("timeWarning", Boolean.TRUE, REQUEST);
-					ctx.setAttribute("avgTime", new Double(avgHours), REQUEST);
+					ctx.setAttribute("avgTime", Integer.valueOf(avgHours.getFlightTime()), REQUEST);
 				}
 			}
 			
